New travis file. Added postman files and altered swagger model
