# swagger_server/swagger/swagger.yaml
@@ -94,6 +94,10 @@ paths:
 definitions:
   Student:
     type: "object"
+    required:
+    - "first_name"
+    - "last_name"
+    - "student_name"
     properties:
       student_name:
         type: "integer"
